apps/baudflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baudflow-svc
  namespace: baudflow
spec:
  selector:
    app: baudflow
  ports:
    - port: 4000
      targetPort: 4000
