apps/baudflow/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: baudflow
  namespace: baudflow
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Baudflow
    gethomepage.dev/description: Internet Speed Monitor
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: speedtest.png
    gethomepage.dev/href: https://baudflow.v1n.space
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`baudflow.${DOMAIN}`)
      kind: Rule
      services:
        - name: baudflow-svc
          port: 4000
  tls:
    certResolver: default
